[package]
name = "yak-ast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
log = { version = "0.4.20" }
yak-core = { path = "../yak-core" }
yak-lexer = { path = "../yak-lexer" }
