[package]
name = "yak-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.4.11", features = ["derive", "env"] }
log = { version = "0.4.20" }
pretty_env_logger = { version = "0.5.0" }
reqwest = { version = "0.11.23", features = ["blocking"] }
url = { version = "2.5.0" }
yak-ast = { path = "../yak-ast" }
yak-core = { path = "../yak-core" }
yak-lexer = { path = "../yak-lexer" }
