[package]
name = "yak-pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
log = { version = "0.4.20" }
url = { version = "2.5.0" }
yak-ast = { path = "../yak-ast" }
yak-compiler = { path = "../yak-compiler" }
yak-core = { path = "../yak-core" }
yak-lexer = { path = "../yak-lexer" }
